style.css
/* shows a warning message when the screen is rotated into portrait mode -- necessary to prevent issues on mobile devices 
        @media screen and (orientation:portrait) {
            #portrait_warning {
                position: fixed;
                top: 0px;
                left: 0px;
                width: 100%;
                height: 100%;
                text-align: center;
                background: white;
                z-index: 1000;
                display: block;
            }
        }
        */

     /* hides the rotational warning when the screen is in landscape mode */
     @media screen and (orientation:landscape) {
        #portrait_warning {
            display: none;
        }
    }

.debug {
        position: absolute;
        top: 2%;
        right: 2%;
        width: 10%;
        height: 5%;
        background-color: darkgrey;
        border: black;
        z-index: 1000;
        display: block;
}

header 
{
    background-color: black;
    display: flex;
    align-items: center;
    margin: 0 auto;
    box-shadow: 0 0 8px #1f477d;
    position: fixed center;
    width: 100%;
    height: 10%;
    z-index: 500;
    padding: 2px auto;
    display: block;
    justify-content: center;
    opacity: 80%;
}

/*----------------------------------------------------------------------*/

/* Logo & Navigation */

nav 
{
    display: flex;
    text-align: center;
    font-family: funkydori, sans-serif;
    font-weight: 400;
    font-style: normal;
    text-decoration: none;
    font-size: 1rem;
    font-weight: 500;
    padding: 0px 5px;
    margin: 1px auto;
    justify-content: center;
    z-index: 1005;
}

nav ul 
{
    display: flex;
    text-decoration: none;
    list-style-type: none;
    padding: 0 8px;
    margin: 1px auto;
}

.navButtons {
    position: fixed;
    left: 50%;
    width: 8em;
    height: 6em;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1500;
    float: left;
    transform: translate(-50%, -50%);
    margin: 0 auto;
}


.logo {
    text-align: center;
    font-size: 2.5rem;
    margin: 0px auto;
    padding: 10px 0;
    text-decoration: none;
    color: white;
    font-family: funkydori,sans-serif;
    font-weight: 700;
    font-style: normal;
}
  
.logo a{
    text-decoration: none;
    color: white;
}

.logo-button {
    border-radius: 50%;
    border: black;
    margin: 0 auto;
    padding-bottom: 1em;
    z-index: 2000;
    background:url('images/logo.jpg');
    background-size: cover;
    color: black;
    width: 8em;
    height: 6em;
    justify-content: center;
    align-items: center;
}

.size-button {
    border-radius: 2px;
    border: black;
    background: turquoise;
    color: black;
    width: 6em;
    height: 3em;
    margin-left: .5em;
    font-size: .75rem;
}

.petal-button {
    border-radius: 2px;
    border: black;
    background: skyblue;
    color: black;
    width: 6em;
    height: 3em;
    margin-left: .5em;
    font-size: .75rem;
}

.flower-button {
    border-radius: 2px;
    border: black;
    background: pink;
    color: black;
    width: 6em;
    height: 3em;
    margin-left: .5em;
    font-size: .75rem;
}

.leaf-button {
    border-radius: 2px;
    border: black;
    background: lightgreen;
    color: black;
    width: 6em;
    height: 3em;
    margin-left: .5em;
    font-size: .75rem;
}

/*
.growth-button {
    border-radius: 2px;
    border: black;
    background: gold;
    color: black;
    width: 6em;
    height: 3em;
    margin-left: .5em;
    font-size: .75rem;
}
*/

.color-button {
    border-radius: 2px;
    border: black;
    background: magenta;
    color: black;
    width: 6em;
    height: 3em;
    margin-left: .5em;
    font-size: .75rem;
}

.petalOrientButtons {
    position: fixed;
    left: 50%;
    bottom: 5%;
    width: 50em;
    height: 5em;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1500;
    float: left;
    transform: translate(-50%, -50%);
    margin: 0 auto;
}

.sizeButtons {
    position: fixed;
    left: 50%;
    bottom: 5%;
    width: 50em;
    height: 5em;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1500;
    float: left;
    transform: translate(-50%, -50%);
    margin: 0 auto;
}

.flowerOrientButtons {
    position: fixed;
    left: 50%;
    bottom: 5%;
    width: 50em;
    height: 5em;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1500;
    float: left;
    transform: translate(-50%, -50%);
    margin: 0 auto;
}

.leafFusionButtons {
    position: fixed;
    left: 50%;
    bottom: 5%;
    width: 50em;
    height: 5em;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1500;
    float: left;
    transform: translate(-50%, -50%);
    margin: 0 auto;
}

.colorButtons {
    position: fixed;
    left: 50%;
    bottom: 5%;
    width: 50em;
    height: 5em;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1500;
    float: left;
    transform: translate(-50%, -50%);
    margin: 0 auto;
}

/*
.buttons a{
    display: inline-block;
    align-items:center;
    text-align: center;
    text-decoration: none;
    color:white;
}
*/


.small-scale-button {
    border-radius: 6px;
    border: black;
    background:url('images/pattern-HS2.png');
    background-size: cover;
    color: black;
    width: 8em;
    height: 8em;
    margin-left: 2em;
}

.medium-scale-button {
    border-radius: 6px;
    border: black;
    background:url('images/pattern-HS2.png');
    background-size: cover;
    color: black;
    width: 8em;
    height: 8em;
    margin-left: 2em;
}

.large-scale-button {
    border-radius: 6px;
    border: black;
    background:url('images/pattern-HS2.png');
    background-size: cover;
    color: black;
    width: 8em;
    height: 8em;
    margin-left: 2em;
}

.radial-button {
    border-radius: 6px;
    border: black;
    background:url('images/pattern-radial1.png');
    background-size: cover;
    color: black;
    width: 8em;
    height: 8em;
    margin-left: 2em;
}

.two21-button {
    border-radius: 6px;
    border: black;
    background:url('images/pattern-221.png');
    background-size: cover;
    color: black;
    width: 8em;
    height: 8em;
    margin-left: 2em;
}

.four1-button {
    border-radius: 6px;
    border: black;
    background:url('images/pattern-41.png');
    background-size: cover;
    color: black;
    width: 8em;
    height: 8em;
    margin-left: 2em;
}

.pendulus-button {
    border-radius: 6px;
    border: black;
    background:url('images/pattern-flowers-pendulus.png');
    background-size: cover;
    color: black;
    width: 8em;
    height: 8em;
    margin-left: 2em;
}

.upright-button {
    border-radius: 6px;
    border: black;
    background:url('images/pattern-flowers_erect.png');
    background-size: cover;
    color: black;
    width: 8em;
    height: 8em;
    margin-left: 2em;
}

.fused-button {
    border-radius: 6px;
    border: black;
    background:url('images/fused-leaves.png');
    background-size: cover;
    color: black;
    width: 8em;
    height: 8em;
    margin-left: 2em;
}

.unfused-button {
    border-radius: 6px;
    border: black;
    background:url('images/unfused-leaves.png');
    background-size: cover;
    color: black;
    width: 8em;
    height: 8em;
    margin-left: 2em;
}

.yellow-button {
    border-radius: 6px;
    border: black;
    background-color: yellow;
    color: black;
    width: 6em;
    height: 6em;
    margin-left: 2em;
}

.white-button {
    border-radius: 6px;
    border: black;
    background-color: white;
    color: black;
    width: 6em;
    height: 6em;
    margin-left: 2em;
}

.red-button {
    border-radius: 6px;
    border: black;
    background-color: red;
    color: black;
    width: 6em;
    height: 6em;
    margin-left: 2em;
}

.pink-button {
    border-radius: 6px;
    border: black;
    background-color:pink;
    color: black;
    width: 6em;
    height: 6em;
    margin-left: 2em;
}

.orange-button {
    border-radius: 6px;
    border: black;
    background-color:orange;
    color: black;
    width: 6em;
    height: 6em;
    margin-left: 2em;
}

